Fixed a bug causing the two front-end and back-end info stack cards to disappear due to bad z-indexing.

--- a/src/components/Skills/media/highres-desktop-1282.css
+++ b/src/components/Skills/media/highres-desktop-1282.css
@@ -96,7 +96,7 @@
         left: 18%;
         top: 10vh;
         background-color: #099cea !important;
-        z-index: -999999;
+        /* z-index: -999999; */
         width: 30%;
     }
     hr {
@@ -118,7 +118,7 @@
         top: 15vh;
         text-align: center;
         width: 100%;
-        z-index: -999999;
+        /* z-index: -999999; */
     }
     .nav-tabs {
         border: none !important;
