--- a/src/components/Skills/media/laptop-962.css
+++ b/src/components/Skills/media/laptop-962.css
@@ -129,7 +129,7 @@
         position: relative;
         margin-left: -25px;
         background-color: #099cea !important;
-        z-index: -999999;
+        /* z-index: -999999; */
         width: 76%;
         height: 56vh;
         margin-top: 2vh;
@@ -140,7 +140,7 @@
         top: 15vh;
         text-align: center;
         width: 100%;
-        z-index: -999999;
+        /* z-index: -999999; */
     }
     hr {
         background-color: #ffffff;
